# ihixs

./: CMakeLists.txt  LICENSE  README.md  ihixs.cpp
runcard/: pheno.card
src/chaplin/: CMakeLists.txt  cppchaplin.cpp  cppchaplin.h  hpl1.cpp  hpl2.cpp  hpl3.cpp  hpl4.cpp
src/core/: CMakeLists.txt  channel.cpp  channel.h  inclusive_process.cpp  inclusive_process.h  input_parameters.cpp  input_parameters.h  luminosity_integrals.cpp  luminosity_integrals.h  sigma_term.cpp  sigma_term.h
src/gtest-1.7.0/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/xcuserdata/lazopolis.xcuserdatad/xcschemes/: Test.xcscheme  TestAndBuild.xcscheme  WidgetFramework.xcscheme  WidgetFrameworkTest.xcscheme  xcschememanagement.plist
src/gtest-1.7.0/xcode/gtest.xcodeproj/xcuserdata/lazopolis.xcuserdatad/xcschemes/: Check.xcscheme  Version Info.xcscheme  gtest-framework.xcscheme  gtest-static.xcscheme  gtest_main-static.xcscheme  gtest_unittest-framework.xcscheme  gtest_unittest-static.xcscheme  sample1_unittest-framework.xcscheme  sample1_unittest-static.xcscheme
src/higgs/: CMakeLists.txt
src/higgs/effective_theory/: CMakeLists.txt  XSW.txt  XSZ.txt  XSZb.txt  eft_gg_delta.cpp  eft_gg_plus.cpp  eft_gg_reg.cpp  eft_gg_reg_n3lo.cpp  eft_gg_reg_n3lo_exact.cpp  eft_gg_reg_nnlo.cpp  eft_q1q2_reg.cpp  eft_qg_reg.cpp  eft_qg_reg_n3lo_exact.cpp  eft_qq_reg.cpp  eft_qqbar_reg.cpp  higgs_eft.cpp  higgs_eft.h  inclusive_higgs_eft.cpp  inclusive_higgs_eft.h  inclusive_higgs_eft_fast.cpp  inclusive_higgs_eft_fast.h  wilson_coefficients.cpp  wilson_coefficients.h
src/higgs/electroweak_corrections/: CMakeLists.txt  electroweak_data.h  gluon_fusion_ew_coefficients.cpp  gluon_fusion_ew_coefficients.h
src/higgs/exact_qcd_corrections/: CMakeLists.txt  inclusive_higgs_exact.cpp  inclusive_higgs_exact.h  nlo_exact_matrix_elements.cpp  nlo_exact_matrix_elements.h
src/higgs/ggf_manager/: ggf_manager.cpp  ggf_manager.h
src/higgs/mt_expansion/: CMakeLists.txt  inclusive_mt_expansion.cpp  inclusive_mt_expansion.h  mt_expansion.cpp  mt_expansion.h  mt_expansion_gg.cpp  mt_expansion_gg.h  mt_expansion_qg.cpp  mt_expansion_qg.h
src/models/: CMakeLists.txt  model.cpp  model.h  particle.cpp  particle.h
src/resummation/: CMakeLists.txt  dump.txt  gauss_grid.cpp  gauss_grid.h  psi.cpp  psi.h  threshold_resummation.cpp  threshold_resummation.h  wpsipg.cpp
src/scet_resummation/: CMakeLists.txt  scetter.cpp  scetter.h
src/tests/: CMakeLists.txt  eft_q1q2_n3lo_Lf_test.cpp  ihixs_as_series.cpp  ihixs_eft.cpp  ihixs_nlo_exact_test.cpp  mt_expansion_test.cpp  psi_test.cpp  quark_evolution_test.cpp  scet_test.cpp
src/tools/: CMakeLists.txt  as_series.cpp  as_series.h  constants.h  data_format.cpp  data_format.h  luminosity.cpp  luminosity.h  result_pair.cpp  result_pair.h  timekeeper.h  user_interface.cpp  user_interface.h  vegas_adaptor.cpp  vegas_adaptor.h
