add_library(higgs_eft_lib
                higgs_eft.cpp
                eft_gg_delta.cpp
                eft_gg_plus.cpp
                eft_gg_reg.cpp
                eft_gg_reg_nnlo.cpp
                eft_gg_reg_n3lo.cpp
                eft_qg_reg.cpp
                eft_qqbar_reg.cpp
                eft_qq_reg.cpp
                eft_q1q2_reg.cpp
                wilson_coefficients.cpp
                inclusive_higgs_eft.cpp
                inclusive_higgs_eft_fast.cpp    
                )


                
